# asset_tracker

./: .gitignore  README.md  README.rst  pyproject.toml  run_script.sh
asset_tracker/: config.py  data_fetcher.py  email_sender.py  email_template.html  gmail_service.py  main.py
tests/: test_asset_tracker.py
